# BugFund

./: LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
agent_swarm/: __init__.py  nodes.py  prompts.py  skills.py  state.py
agent_swarm/memory/: __init__.py  long_term.py  short_term.py
agent_swarm/routing/: __init__.py  edges.py  policies.py
ai_gateway/: __init__.py  base.py  budget_guard.py  litellm_provider.py  proxy.py  router.py
ai_gateway/config/: providers.yaml
control_plane/: __init__.py
control_plane/api/: __init__.py  deps.py  main.py
control_plane/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
control_plane/db/: __init__.py  base.py  models.py  session.py
control_plane/migrations/: env.py
control_plane/orchestrator/: __init__.py  budget.py  checkpoints.py  graph.py  runner.py  state.py
control_plane/tasks/: __init__.py  campaigns.py  celery_app.py  sandbox_jobs.py
docs/: architecture.md  threat_model.md
docs/adr/: 0001-three-plane-separation.md  0002-actor-critic-as-separate-agents.md  0003-internal-only-sandbox-api.md
execution_engine/: __init__.py
execution_engine/api/: __init__.py  schemas.py  server.py
execution_engine/collectors/: __init__.py  crash.py  logs.py  traces.py
execution_engine/sandbox/: manager.py  (+4 more)
observability/: __init__.py  langfuse.py  metrics.py  tracing.py
scripts/: run_dev.sh  seed_demo.py
tests/: test_control_plane.py  test_execution_engine.py  test_gateway_observability.py  test_runtime.py  test_swarm_additions.py
(+32 files in other folders)
